add fluxo token

--- a/task-management/appsettings.json
+++ b/task-management/appsettings.json
@@ -1,9 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "JwtSettings": {
+        "Secret": "sua_chave_secreta_muito_longa_pelo_menos_32_caracteres",
+        "ExpiryMinutes": 120,
+        "Issuer": "MinhaAPI",
+        "Audience": "https://localhost"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
